# evaluation-instruments

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.IN  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/image/: Dockerfile
.devcontainer/image/stagefiles/: layer.sh
.devcontainer/image/stagefiles/python/: requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: changelog.yml
changelog/: 10.feature.rst  11.feature.rst  19.misc.rst  7.bugfix.rst  9.feature.rst  README.rst
examples/data/: 000df600-cde6-43d3-b94d-07000216cd17.json  00a5d60f-04fb-4b93-bb88-af5a686aa871.json
instruments/epic_draft_appeal/: draft_appeal_prompt.py
instruments/epic_summary_of_care/: Summary_of_Care.ipynb  summary_of_care_prompt.py
instruments/pdsqi_9/: PDSQI_annotated.ipynb  README.md  pdsqi_prompt.py
src/evaluation_instruments/: __init__.py  _evaluation.py
src/evaluation_instruments/instruments/epic_draft_appeal/: Draft_Appeal.ipynb
src/evaluation_instruments/post/: __init__.py
src/evaluation_instruments/prep/: __init__.py  data_handler.py
tests/: test_evaluation.py  test_model_token_usage.py  test_post.py  test_prep.py
