[build-system]
requires = ["setuptools >= 65.6.0", "wheel >= 0.36.0"]
build-backend = 'setuptools.build_meta'

[tool.towncrier]
package = "evaluation_instruments"
package_dir = "src"
directory = "changelog"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/epic-open-source/evaluation-instruments/issues/{issue})"
title_format = "## {version}"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["","",""]

[tool.black]
line-length = 119
target-version = ["py312"]
